enhanced .gitignore and minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@ buildNumber.properties
 .settings/
 .vsc
 
+# Intellij files
+.idea
+*.iml
+
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
