:arrow_down: Downgraded to JDK 8
Downgraded to JDK 8 but with Cirrus CI testing on JDK 8 and 11.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,7 @@
 container:
-  image: openjdk:11-jdk-stretch
+  matrix:
+    image: openjdk:8-jdk-stretch
+    image: openjdk:11-jdk-stretch
 
 test_task:
   test_script: ./mvnw clean install
