--- a/lambico-datatest-jpa/pom.xml
+++ b/lambico-datatest-jpa/pom.xml
@@ -22,7 +22,10 @@
       <artifactId>junit</artifactId>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
