--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,8 @@ buildNumber.properties
 .idea
 *.iml
 
+# Ignore memory dumps
+.attach_pid*
+
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
