[issue_3_fix] - working solution from both internal folder and external jar

--- a/lambico-datatest-jpa/pom.xml
+++ b/lambico-datatest-jpa/pom.xml
@@ -18,11 +18,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.lambico</groupId>
+      <artifactId>lambico-datatest-test-resources</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
