:page_facing_up: Added license header to files and checking of its presence
 #10

--- a/lambico-datatest-jpa/pom.xml
+++ b/lambico-datatest-jpa/pom.xml
@@ -16,6 +16,10 @@
   <description>Testing data access for JPA projects.</description>
   <url>http://www.lambico.org</url>
 
+  <properties>
+    <main.basedir>${basedir}/..</main.basedir>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.lambico</groupId>
