--- a/lambico-datatest-test-resources/pom.xml
+++ b/lambico-datatest-test-resources/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.lambico</groupId>
         <artifactId>lambico-datatest-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>T1.0</version>
     </parent>
 
     <artifactId>lambico-datatest-test-resources</artifactId>
@@ -21,6 +19,6 @@
         <main.basedir>${basedir}/..</main.basedir>
     </properties>
 
-    <dependencies/>
+    <dependencies />
 
 </project>
